Update project name URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "https://RaphaelZLB.github.io/My-portfolio",
+  "name": "https://RaphaelZLB.github.io/portfolio",
   "private": true,
   "version": "0.0.2",
   "type": "module",
